--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Mon premier workflow
 on: [push]
 jobs:
-  checkout:
+  say-hello:
     runs-on: ubuntu-latest
     steps:
-      - run: ls
+      - run: echo "Hello World !"
