--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Hello World !"
+      - run: echo build
   deploy:
     needs: build
     runs-on: unbuntu-latest
