--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,5 @@ jobs:
       - run: echo fruit=pomme >> $GITHUB_OUTPUT
         id: step1
       - run: |
-          echo ::error::fruit is ${{ steps.step1.outputs.fruit}} sould be poire
+          echo ::error:: file=unfichier.txt,line=1,endLine=2,col=5::fruit is ${{ steps.step1.outputs.fruit}} sould be poire
           if: steps.step1.outputs.fruit != 'poire'
