--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo ::group::mon groupe
-          echo 1
-          echo 2
-          echo 3
-          echo 4
-          echo ::endgroup::
-   
+          pwd
+          echo $SHELL
+        shell: sh
+      - run: |
+          pwd
+          echo $SHELL
+        shell: pwsh
