--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,4 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          pwd
-          echo $SHELL
-        shell: sh
-      - run: |
-          pwd
-          echo $SHELL
-        shell: pwsh
+      - run: ls
