--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,4 +5,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: ls
+      - name: install nodejs
+        uses: actions/setup-node@v4
+      - name: fetch repository
+        uses: actions/checkout@v4
+      - name: install dependencies
+        run: npm install
+        working-directory: ./vite-project
