--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,12 @@ jobs:
         uses: actions/setup-node@v4
       - name: fetch repository
         uses: actions/checkout@v4
+      - name: configure cache
+        uses: actions/cache@v3
+        with:
+          key: ${{ runner.os }}-${{ hashFile('./vite-project/package-lock.json') }}
+          path: ./vite-project/.npm
+
       - name: install dependencies
-        run: npm install
+        run: npm ci --cache ./npm
         working-directory: ./vite-project
