--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
           path: ./vite-project/.npm
 
       - name: install dependencies
-        run: npm ci --cache ./npm
+        run: npm ci --cache ./npm --prefer-offline
         working-directory: ./vite-project
