--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - name: configure cache
         uses: actions/cache@v3
         with:
-          key: ${{ runner.os }}-${{ hashFile('./vite-project/package-lock.json') }}
+          key: ${{ runner.os }}-${{ hashFiles('./vite-project/package-lock.json') }}
           path: ./vite-project/.npm
 
       - name: install dependencies
