--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,10 @@ jobs:
       - name: configure cache
         uses: actions/cache@v3
         with:
-          key: ${{ runner.os }}-${{ hashFiles('./vite-project/package-lock.json') }}
           path: ./vite-project/.npm
+          key: ${{ runner.os }}-${{ hashFiles('./vite-project/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os}}-
 
       - name: install dependencies
         run: npm ci --cache ./npm --prefer-offline
