--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,16 +2,10 @@ name: Mon premier workflow
 on: push
 
 jobs:
-  build:
+  testdocker:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    container:
+      image: node:16
     steps:
-      - uses: actions/checkout@v4
-      - run: |
-          echo 123 > test.txt
-          git config --global user.email "test&dyma.fr"
-          git config --global user.name "FROM CI"
-          git add test.txt
-          git commit -m "first"
-          git push origin main
+      - run: ls -la
+      - run: npm -v
