--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,3 +10,17 @@ jobs:
         with:
           name: myfirstartifact
           path: ./test.txt
+
+  downloadartifacts:
+    needs: testartifact
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: myfirstartifact
+          path: ./ici
+
+      - run: |
+          ls
+          ls ./ici
+          cat ./ici/test.txt
