--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Mon premier workflow
 on: push
 
 jobs:
-  testartifacts:
+  testartifact:
     runs-on: ubuntu-latest
     steps:
       - run: echo 123 > test.txt
