--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install nodejs
         uses: actions/setup-node@v3
-        name: Init cache
+      - name: Init cache
         uses: actions/cache@v3
         with:
           key: ${{ runner.os}}-${{ hashFiles('./vite-project/package-lock.json') }}
