--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,34 +5,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Install nodejs
-        uses: actions/setup-node@v3
-      - name: Init cache
-        uses: actions/cache@v3
-        with:
-          key: ${{ runner.os}}-${{ hashFiles('./vite-project/package-lock.json') }}
-          path: ./vite-project/.npm
-      - name: Install dependencies
-        working-directory: ./vite-project
-        run: npm ci --cache .npm --prefer-offline
-      - name: Build application
-        working-directory: ./vite-project
-        run: npm run build
-      - uses: actions/upload-artifact@v4
-        with:
-          name: build
-          path: ./vite-project/dist
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: build
-          path: ./build
-
-      - run: |
-          ls
-          ls build
+      -run: echo $GITHUB_STEP-SUMMARY
+      -run: echo '# Je suis un titre' >> $GITHUB_STEP_SUMMARY
+      -run: echo 'Je suis du contenu :rocker:' >> $GITHUB_STEP_SUMMARY
+      -run: echo '' >> $GITHUB_STEP_SUMMARY
