--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,5 +7,5 @@ jobs:
     steps:
       -run: echo $GITHUB_STEP_SUMMARY
       -run: echo '# Je suis un titre' >> $GITHUB_STEP_SUMMARY
-      -run: echo 'Je suis du contenu :rocker:' >> $GITHUB_STEP_SUMMARY
+      -run: echo 'Je suis du contenu :rocket:' >> $GITHUB_STEP_SUMMARY
       -run: echo '' >> $GITHUB_STEP_SUMMARY
